# MDF-Simulator

./: .gitignore  CLAUDE.md  COMMANDS.md  README.md  pyproject.toml  requirements.in  requirements.txt  server.py
.claude/: settings.local.json
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
cli/: gui.py  test_harness.py
compiler/: __init__.py  codegen.py  error.py  loader.py  manifest_builder.py  mypy_check.py  packager.py  senescence.py  transformer.py  type_utils.py
docs/: 2026-03-06-simulation-engine-design.md  2026-03-23-list-time-primitives-design.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  MODEL-BUILDING-PROCESS.md  TESTING.md
engine/: __init__.py  bridge.py  bundle_loader.py  clock.py  ctx.py  event.py  manifest.py  microstep.py  preflight.py  registry.py  relationship.py  scenario_runner.py  scheduler.py  trigger.py
issues/: ISSUES.md  codegen-001-name-defined-in-generated-code.md  codegen-002-enum-assignment-type-mismatch.md  drawio-001-association-edge-routing-overlap.md  drawio-002-domain-diagram-missing.md  drawio-003-render-overwrites-layout.md  drawio-004-referential-annotation.md  elevator-001-subtype-relvar-inheritance.md  elevator-003-linked-list-r9-metamodel.md  elevator-005-at-floor-generates-to-class-name.md  elevator-006-door-closed-event-routing.md  elevator-007-dispatcher-queue-no-floorcall-link.md  engine-execution-trace-improvements.md  remove-method-collision.md  val-001-realized-domain-class-diagram.md
mdf/: runtime.py
pycca/: SYNTAX.md  __init__.py  (+1 more)
(+263 files in other folders)
